--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Development Portfolio</title>
+    <title>Sebsatian Murgu Development Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/default.css">
+    <link href="css/default.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img class="logoImage" src="img/PortfolioLogo.png" alt="Logo"><!--
-        --><section class="rightHeading">
-            <h1>SEBASTIAN MURGU</h1>
-            <h3>CODE PORTFOLIO</h3>
-        </section>
+        <img id="logo-image" src="img/PortfolioLogo.png" alt="Logo"><!--
+        --><div id="header-right">
+            <h2 id="header-name">SEBASTIAN MURGU</h2>
+            <h3 id="header-subheading">DEVELOPMENT PORTFOLIO</h3>
+        </div>
     </header>
+
+    <hr id="horizontal-rule-header">
+
+    <img id="banner" src="img/banner.png" alt="Banner Image">
 
     <div class="project-card">
         <img src="img/arithmetic-logo.png">
