Adjusted height and color of header horizontal rule

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </header>
 
-    <hr id="horizontal-rule-header">
+    <hr id="header-rule">
 
     <img id="banner" src="img/banner.png" alt="Banner Image">
 
