Added and styled 'Featured Work' heading

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img id="logo-image" src="img/PortfolioLogo.png" alt="Logo"><!--
         --><div id="header-right">
-            <h2 id="header-name">SEBASTIAN MURGU</h2>
+            <h1 id="header-name">SEBASTIAN MURGU</h1>
             <h3 id="header-subheading">DEVELOPMENT PORTFOLIO</h3>
         </div>
     </header>
@@ -19,6 +19,8 @@
     <hr id="header-rule">
 
     <img id="banner" src="img/banner.png" alt="Banner Image">
+
+    <h2 id="projects-heading">Featured Work</h2>
 
     <div class="project-card">
         <img src="img/arithmetic-logo.png">
