Adjusted project cards
* Include app name as a heading
* Centered description
* Include GitHub logo to act as link, instead of the whole card acting as a link

--- a/index.html
+++ b/index.html
@@ -24,24 +24,39 @@
 
     <div class="project-card">
         <img src="img/arithmetic-logo.png">
+        <h4 class="project-title">Arithmetic App</h4>
         <div class="project-details">
             <p>An android application which randomly generates arithmetic questions.</p>
         </div>
-        <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        <div class="project-card-github">
+            <img src="img/GitHub32.png" alt="GitHub">
+            View on GitHub
+            <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        </div>
     </div>
     <div class="project-card">
         <img src="img/arithmetic-logo.png">
+        <h4 class="project-title">Arithmetic App</h4>
         <div class="project-details">
             <p>An android application which randomly generates arithmetic questions.</p>
         </div>
-        <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        <div class="project-card-github">
+            <img src="img/GitHub32.png" alt="GitHub">
+            View on GitHub
+            <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        </div>
     </div>
     <div class="project-card">
         <img src="img/arithmetic-logo.png">
+        <h4 class="project-title">Arithmetic App</h4>
         <div class="project-details">
             <p>An android application which randomly generates arithmetic questions.</p>
         </div>
-        <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        <div class="project-card-github">
+            <img src="img/GitHub32.png" alt="GitHub">
+            View on GitHub
+            <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        </div>
     </div>
 </body>
 </html>
