Wrapped project cards in a section

--- a/index.html
+++ b/index.html
@@ -22,41 +22,43 @@
 
     <h2 id="projects-heading">Featured Work</h2>
 
-    <div class="project-card">
-        <img src="img/arithmetic-logo.png">
-        <h4 class="project-title">Arithmetic App</h4>
-        <div class="project-details">
-            <p>An android application which randomly generates arithmetic questions.</p>
+    <section id="projects-section">
+        <div class="project-card">
+            <img src="img/arithmetic-logo.png">
+            <h4 class="project-title">Arithmetic App</h4>
+            <div class="project-details">
+                <p>An android application which randomly generates arithmetic questions.</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="GitHub">
+                View on GitHub
+                <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+            </div>
         </div>
-        <div class="project-card-github">
-            <img src="img/GitHub32.png" alt="GitHub">
-            View on GitHub
-            <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+        <div class="project-card">
+            <img src="img/arithmetic-logo.png">
+            <h4 class="project-title">Arithmetic App</h4>
+            <div class="project-details">
+                <p>An android application which randomly generates arithmetic questions.</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="GitHub">
+                <p>View on GitHub</p>
+                <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+            </div>
         </div>
-    </div>
-    <div class="project-card">
-        <img src="img/arithmetic-logo.png">
-        <h4 class="project-title">Arithmetic App</h4>
-        <div class="project-details">
-            <p>An android application which randomly generates arithmetic questions.</p>
+        <div class="project-card">
+            <img src="img/arithmetic-logo.png">
+            <h4 class="project-title">Arithmetic App</h4>
+            <div class="project-details">
+                <p>An android application which randomly generates arithmetic questions.</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="GitHub">
+                View on GitHub
+                <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+            </div>
         </div>
-        <div class="project-card-github">
-            <img src="img/GitHub32.png" alt="GitHub">
-            View on GitHub
-            <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
-        </div>
-    </div>
-    <div class="project-card">
-        <img src="img/arithmetic-logo.png">
-        <h4 class="project-title">Arithmetic App</h4>
-        <div class="project-details">
-            <p>An android application which randomly generates arithmetic questions.</p>
-        </div>
-        <div class="project-card-github">
-            <img src="img/GitHub32.png" alt="GitHub">
-            View on GitHub
-            <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
-        </div>
-    </div>
+    </section>
 </body>
 </html>
