Added footer and relevant styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>An android application which randomly generates arithmetic questions.</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub">
+                <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
                 View on GitHub
                 <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
             </div>
@@ -60,5 +60,17 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <a href="https://github.com/Sebastian-?tab=repositories">
+            <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="300px">
+        </a>
+        <a href="www.linkedin.com/in/hsmurgu">
+            <img src="img/Logo-2CRev-81px-TM.png" alt="LinkedIn Profile" width="300px">
+        </a>
+        <a href="https://leetcode.com/hsmurgu/">
+            <img src="img/leetcode-logo.png" alt="LeetCode Profile" width="300px">
+        </a>
+    </footer>
 </body>
 </html>
