Minor changes to conform to w3c validators

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="projects-section">
         <div class="project-card">
-            <img src="img/arithmetic-logo.png">
+            <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
                 <p>An android application which randomly generates arithmetic questions.</p>
@@ -36,25 +36,25 @@
             </div>
         </div>
         <div class="project-card">
-            <img src="img/arithmetic-logo.png">
+            <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
                 <p>An android application which randomly generates arithmetic questions.</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub">
-                <p>View on GitHub</p>
+                <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
+                View on GitHub
                 <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
             </div>
         </div>
         <div class="project-card">
-            <img src="img/arithmetic-logo.png">
+            <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
                 <p>An android application which randomly generates arithmetic questions.</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub">
+                <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
                 View on GitHub
                 <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
             </div>
@@ -63,13 +63,13 @@
 
     <footer>
         <a href="https://github.com/Sebastian-?tab=repositories">
-            <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="300px">
+            <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="300">
         </a>
-        <a href="www.linkedin.com/in/hsmurgu">
-            <img src="img/Logo-2CRev-81px-TM.png" alt="LinkedIn Profile" width="300px">
+        <a href="https://www.linkedin.com/in/hsmurgu">
+            <img src="img/Logo-2CRev-81px-TM.png" alt="LinkedIn Profile" width="300">
         </a>
         <a href="https://leetcode.com/hsmurgu/">
-            <img src="img/leetcode-logo.png" alt="LeetCode Profile" width="300px">
+            <img src="img/leetcode-logo.png" alt="LeetCode Profile" width="300">
         </a>
     </footer>
 </body>
