Added semantic tags, directed links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/default.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-</head>
 <body>
+
     <header>
         <img id="logo-image" src="img/PortfolioLogo.png" alt="Logo"><!--
         --><div id="header-right">
@@ -22,8 +22,8 @@
 
     <h2 id="projects-heading">Featured Work</h2>
 
-    <section id="projects-section">
-        <div class="project-card">
+    <main id="projects-section">
+        <article class="project-card">
             <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
@@ -32,10 +32,10 @@
             <div class="project-card-github">
                 <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
                 View on GitHub
-                <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+                <a href="https://github.com/Sebastian-/ArithmeticApp" target="_blank"><span></span></a>
             </div>
-        </div>
-        <div class="project-card">
+        </article>
+        <article class="project-card">
             <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
@@ -44,10 +44,10 @@
             <div class="project-card-github">
                 <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
                 View on GitHub
-                <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+                <a href="https://github.com/Sebastian-/ArithmeticApp" target="_blank"><span></span></a>
             </div>
-        </div>
-        <div class="project-card">
+        </article>
+        <article class="project-card">
             <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
@@ -56,19 +56,19 @@
             <div class="project-card-github">
                 <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
                 View on GitHub
-                <a href="https://github.com/Sebastian-/ArithmeticApp"><span></span></a>
+                <a href="https://github.com/Sebastian-/ArithmeticApp" target="_blank"><span></span></a>
             </div>
-        </div>
-    </section>
+        </article>
+    </main>
 
     <footer>
-        <a href="https://github.com/Sebastian-?tab=repositories">
+        <a href="https://github.com/Sebastian-?tab=repositories" target="_blank">
             <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="300">
         </a>
-        <a href="https://www.linkedin.com/in/hsmurgu">
+        <a href="https://www.linkedin.com/in/hsmurgu" target="_blank">
             <img src="img/Logo-2CRev-81px-TM.png" alt="LinkedIn Profile" width="300">
         </a>
-        <a href="https://leetcode.com/hsmurgu/">
+        <a href="https://leetcode.com/hsmurgu/" target="_blank">
             <img src="img/leetcode-logo.png" alt="LeetCode Profile" width="300">
         </a>
     </footer>
