updated site content with relevant projects

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <hr id="header-rule">
 
-    <img id="banner" src="img/banner.png" alt="Banner Image">
+    <img id="banner" src="img/banner1200px.png" alt="Banner Image">
 
     <h2 id="projects-heading">Featured Work</h2>
 
     <main id="projects-section">
         <article class="project-card">
-            <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
+            <img src="img/arithmetic-app300px.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
                 <p>An android application which randomly generates arithmetic questions.</p>
@@ -36,40 +36,52 @@
             </div>
         </article>
         <article class="project-card">
-            <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
-            <h4 class="project-title">Arithmetic App</h4>
+            <img src="img/portfolio-project.png" alt="Portfolio Site Splash">
+            <h4 class="project-title">Portfolio Site</h4>
             <div class="project-details">
-                <p>An android application which randomly generates arithmetic questions.</p>
+                <p>This responsive portfolio website!</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
+                <img src="img/GitHub32.png" alt="GitHub for Portfolio Site">
                 View on GitHub
-                <a href="https://github.com/Sebastian-/ArithmeticApp" target="_blank"><span></span></a>
+                <a href="https://github.com/Sebastian-/Portfolio-Website" target="_blank"><span></span></a>
             </div>
         </article>
         <article class="project-card">
-            <img src="img/arithmetic-logo.png" alt="Arimetic App Splash">
-            <h4 class="project-title">Arithmetic App</h4>
+            <img src="img/log-analysis-project300px.png" alt="Log Anaysis Splash">
+            <h4 class="project-title">Log Analysis</h4>
             <div class="project-details">
-                <p>An android application which randomly generates arithmetic questions.</p>
+                <p>A script which analyses the database of a made-up news website.</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
+                <img src="img/GitHub32.png" alt="GitHub for Log Analysis">
                 View on GitHub
-                <a href="https://github.com/Sebastian-/ArithmeticApp" target="_blank"><span></span></a>
+                <a href="https://github.com/Sebastian-/Log-Analysis" target="_blank"><span></span></a>
+            </div>
+        </article>
+        <article class="project-card">
+            <img src="img/lcr-project300px.png" alt="LCR Emailer Splash">
+            <h4 class="project-title">LCR Emailer</h4>
+            <div class="project-details">
+                <p>A mostly automated solution for emailing Kumon&trade; Level Completion Reports (LCR).</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="GitHub for LCR Emailer">
+                View on GitHub
+                <a href="https://github.com/Sebastian-/LCR-Emailer" target="_blank"><span></span></a>
             </div>
         </article>
     </main>
 
     <footer>
         <a href="https://github.com/Sebastian-?tab=repositories" target="_blank">
-            <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="300">
+            <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="200">
         </a>
         <a href="https://www.linkedin.com/in/hsmurgu" target="_blank">
-            <img src="img/Logo-2CRev-81px-TM.png" alt="LinkedIn Profile" width="300">
+            <img src="img/Logo-2CRev-81px-TM.png" alt="LinkedIn Profile" width="200">
         </a>
         <a href="https://leetcode.com/hsmurgu/" target="_blank">
-            <img src="img/leetcode-logo.png" alt="LeetCode Profile" width="300">
+            <img src="img/leetcode-logo.png" alt="LeetCode Profile" width="200">
         </a>
     </footer>
 </body>
