Added a README, slight changes to wording in the site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <img id="logo-image" src="img/PortfolioLogo.png" alt="Logo"><!--
-        --><div id="header-right">
+        --><div id="header-text">
             <h1 id="header-name">SEBASTIAN MURGU</h1>
             <h3 id="header-subheading">DEVELOPMENT PORTFOLIO</h3>
         </div>
@@ -20,7 +20,7 @@
 
     <img id="banner" src="img/banner1200px.png" alt="Banner Image">
 
-    <h2 id="projects-heading">Featured Work</h2>
+    <h2 id="projects-heading">Recent Work</h2>
 
     <main id="projects-section">
         <article class="project-card">
