Added scrset/sizes attributes for the logo and banner images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <header>
-        <img id="logo-image" src="img/PortfolioLogo.png" alt="Logo"><!--
+        <img id="logo-image" src="img/PortfolioLogo.png" alt="Logo" sizes="25vw"
+         srcset="img/PortfolioLogo800px.png 800w, img/PortfolioLogo600px.png 600w,
+         img/PortfolioLogo400px.png 400w"><!--
         --><div id="header-text">
             <h1 id="header-name">SEBASTIAN MURGU</h1>
             <h3 id="header-subheading">DEVELOPMENT PORTFOLIO</h3>
@@ -18,7 +20,9 @@
 
     <hr id="header-rule">
 
-    <img id="banner" src="img/banner1200px.png" alt="Banner Image">
+    <img id="banner" src="img/banner.png" alt="Banner Image"
+     sizes="100vw" srcset="img/banner600px.png 600w, img/banner1200px.png 1200w,
+     img/banner2400px.png 2400w">
 
     <h2 id="projects-heading">Recent Work</h2>
 
