Added a project card linking to all repositories

--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
                 <a href="https://github.com/Sebastian-/LCR-Emailer" target="_blank"><span></span></a>
             </div>
         </article>
+        <article class="project-card">
+            <img src="img/Octocat300px.png" alt="GitHub Splash">
+            <h4 class="project-title">All Repositories</h4>
+            <div class="project-details">
+                <p>Older projects include a Java compiler, solutions to SICP exercises, and more!</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="All GitHub Repositories">
+                View on GitHub
+                <a href="https://github.com/Sebastian-?tab=repositories" target="_blank"><span></span></a>
+            </div>
+        </article>
     </main>
 
     <footer>
