--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/default.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+</head>
 <body>
 
     <header>
@@ -31,7 +32,7 @@
             <img src="img/arithmetic-app300px.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
             <div class="project-details">
-                <p>An android application which randomly generates arithmetic questions.</p>
+                <p>An Android application which randomly generates arithmetic questions.</p>
             </div>
             <div class="project-card-github">
                 <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
@@ -67,7 +68,7 @@
             <img src="img/lcr-project300px.png" alt="LCR Emailer Splash">
             <h4 class="project-title">LCR Emailer</h4>
             <div class="project-details">
-                <p>A mostly automated solution for emailing Kumon&trade; Level Completion Reports (LCR).</p>
+                <p>An automated emailing program in use at a small business.</p>
             </div>
             <div class="project-card-github">
                 <img src="img/GitHub32.png" alt="GitHub for LCR Emailer">
