Updated GitHub footer link to point to profile page rather than repositories

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <a href="https://github.com/Sebastian-?tab=repositories" target="_blank">
+        <a href="https://github.com/Sebastian-" target="_blank">
             <img src="img/GitHub_Logo_White.png" alt="GitHub Repositories" width="200">
         </a>
         <a href="https://www.linkedin.com/in/hsmurgu" target="_blank">
