Added project card for archery catalog

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     <h2 id="projects-heading">Recent Work</h2>
 
     <main id="projects-section">
+    	<article class="project-card">
+            <img src="img/archery_catalog900px.png" alt="Archery Catalog Splash">
+            <h4 class="project-title">Archery Catalog</h4>
+            <div class="project-details">
+                <p>A Flask-based application which allows users to share and view archery related equipment.</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="GitHub for Archery Catalog">
+                View on GitHub
+                <a href="https://github.com/Sebastian-/Archery-Catalog" target="_blank"><span></span></a>
+            </div>
+        </article>
         <article class="project-card">
             <img src="img/arithmetic-app300px.png" alt="Arimetic App Splash">
             <h4 class="project-title">Arithmetic App</h4>
