Added project card for Vancouver-Parks, removed card for the portfolio site itself

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     <h2 id="projects-heading">Recent Work</h2>
 
     <main id="projects-section">
+        <article class="project-card">
+            <img src="img/vancouver_parks.png" alt="Vancouver Parks Splash">
+            <h4 class="project-title">Vancouver Parks</h4>
+            <div class="project-details">
+                <p>A single-page web application showcasing parks in Vancouver</p>
+            </div>
+            <div class="project-card-github">
+                <img src="img/GitHub32.png" alt="GitHub for Portfolio Site">
+                View on GitHub
+                <a href="https://github.com/Sebastian-/Vancouver-Parks" target="_blank"><span></span></a>
+            </div>
+        </article>
     	<article class="project-card">
             <img src="img/archery_catalog900px.png" alt="Archery Catalog Splash">
             <h4 class="project-title">Archery Catalog</h4>
@@ -50,18 +62,6 @@
                 <img src="img/GitHub32.png" alt="GitHub for Arithmetic App">
                 View on GitHub
                 <a href="https://github.com/Sebastian-/ArithmeticApp" target="_blank"><span></span></a>
-            </div>
-        </article>
-        <article class="project-card">
-            <img src="img/portfolio-project.png" alt="Portfolio Site Splash">
-            <h4 class="project-title">Portfolio Site</h4>
-            <div class="project-details">
-                <p>This responsive portfolio website!</p>
-            </div>
-            <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub for Portfolio Site">
-                View on GitHub
-                <a href="https://github.com/Sebastian-/Portfolio-Website" target="_blank"><span></span></a>
             </div>
         </article>
         <article class="project-card">
