Added links for live project sites

--- a/index.html
+++ b/index.html
@@ -24,26 +24,32 @@
     <main id="projects-section">
         <article class="project-card">
             <img src="img/vancouver_parks.png" alt="Vancouver Parks Splash">
-            <h4 class="project-title">Vancouver Parks</h4>
+            <a href="https://parkmap.hsmdev.com/" target="_blank" class="undecorated-link">
+                <h4 class="project-title">Vancouver Parks</h4>
+            </a>
             <div class="project-details">
                 <p>A single-page web application showcasing parks in Vancouver</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub for Portfolio Site">
-                View on GitHub
-                <a href="https://github.com/Sebastian-/Vancouver-Parks" target="_blank"><span></span></a>
+                <a href="https://github.com/Sebastian-/Vancouver-Parks" target="_blank"><img src="img/GitHub32.png" alt="GitHub for Vancouver Parks"></a>
+                <a href="https://parkmap.hsmdev.com/" target="_blank" class="undecorated-link">
+                    View Live Site
+                </a>
             </div>
         </article>
     	<article class="project-card">
             <img src="img/archery_catalog900px.png" alt="Archery Catalog Splash">
-            <h4 class="project-title">Archery Catalog</h4>
+            <a href="https://archerycatalog.hsmdev.com/" target="_blank" class="undecorated-link">
+                <h4 class="project-title">Archery Catalog</h4>
+            </a>
             <div class="project-details">
                 <p>A Flask-based application which allows users to share and view archery related equipment.</p>
             </div>
             <div class="project-card-github">
-                <img src="img/GitHub32.png" alt="GitHub for Archery Catalog">
-                View on GitHub
-                <a href="https://github.com/Sebastian-/Archery-Catalog" target="_blank"><span></span></a>
+                <a href="https://github.com/Sebastian-/Archery-Catalog" target="_blank"><img src="img/GitHub32.png" alt="GitHub for Archery Catalog"></a>
+                <a href="https://archerycatalog.hsmdev.com/" target="_blank" class="undecorated-link">
+                    View Live Site
+                </a>
             </div>
         </article>
         <article class="project-card">
